syntax = "proto3";

option go_package = "github.com/dog-sky/dog_bot/internal/app/interact";

import "google/protobuf/timestamp.proto";

package interact;

service Dog {
  rpc SetStatus (SetStatusRequest) returns (SetStatusReply);

  rpc StatusList (StatusListrequest) returns (StatusListReply);
}

// enum of actions for dog
enum DogAction {
  UNKNOWN_DOG_ACTION = 0;
  POPIS = 1;
  WALK = 2;
}

message SetStatusRequest {
  // dog action
  DogAction action = 1 [json_name = "action"];
}

message SetStatusReply {
  message Result {
    bool created = 1;
  }
  Result result = 1;
}

message StatusListrequest {
  message Filter {
    message Date {
      // fitler date form
      google.protobuf.Timestamp from = 1;
      // filter date to
      google.protobuf.Timestamp to = 2;
    }
    Date date = 1;
    // dog actions
    repeated DogAction actions = 2;
  }
  Filter filter = 1;
}

message StatusListReply {
  message Action {
    google.protobuf.Timestamp date = 1 [json_name = "date"];
    DogAction action = 2 [json_name = "action"];
  }

  repeated Action result = 1 [json_name = "result"];
}
